P4/src/y.output
Gramática

    0 $accept: programa $end

    1 programa: TIPOINT MAIN bloque

    2 $@1: ε

    3 bloque: LLAVEIZQ $@1 declar_var_locales declar_funciones sentencias LLAVEDCH

    4 $@2: ε

    5 declar_var_locales: LOCAL LLAVEIZQ $@2 var_locales LLAVEDCH
    6                   | ε

    7 var_locales: var_locales cuerpo_declar_var
    8            | var_locales cuerpo_declar_const
    9            | cuerpo_declar_var
   10            | cuerpo_declar_const

   11 cuerpo_declar_var: tipo_var_elem nombres PYC
   12                  | TIPOLISTA tipo_var_elem nombres PYC
   13                  | error

   14 nombres: nombres COMA ID
   15        | ID

   16 $@3: ε

   17 cuerpo_declar_const: TIPOCONST tipo_var_elem ID $@3 ASIGN exp_simple PYC

   18 $@4: ε

   19 cuerpo_declar_const: TIPOCONST TIPOLISTA tipo_var_elem ID $@4 ASIGN CORIZQ asig_const_lista PYC

   20 asig_const_lista: items CORDCH
   21                 | CADENA CORDCH

   22 items: items COMA exp_simple
   23      | exp_simple
   24      | ε

   25 declar_funciones: declar_funciones declar_funcion
   26                 | ε

   27 declar_funcion: cabec_funcion bloque PYC

   28 $@5: ε

   29 cabec_funcion: tipo_var ID $@5 PARIZQ parametros PARDCH
   30              | error

   31 parametros: parametros COMA parametro
   32           | parametro
   33           | ε

   34 parametro: tipo_var ID

   35 sentencias: sentencias bloque PYC
   36           | sentencias ID ASIGN sentencia_asig PYC
   37           | sentencias IF sentencia_if PYC
   38           | sentencias WHILE sentencia_while PYC
   39           | sentencias CIN sentencia_entrada PYC
   40           | sentencias COUT sentencia_salida PYC
   41           | sentencias RETURN sentencia_return PYC
   42           | sentencias DO sentencia_do_until PYC
   43           | sentencias ID PARIZQ sentencia_funcion PARDCH PYC
   44           | sentencias sentencia_lista PYC
   45           | ε

   46 sentencia_asig: exp
   47               | CORIZQ items CORDCH
   48               | CORIZQ CADENA CORDCH

   49 sentencia_if: PARIZQ exp PARDCH bloque
   50             | PARIZQ exp PARDCH bloque ELSE bloque

   51 sentencia_while: PARIZQ exp PARDCH bloque

   52 sentencia_entrada: SIG datos_entrada

   53 datos_entrada: datos_entrada SIG exp
   54              | exp

   55 sentencia_salida: ANT datos_salida

   56 datos_salida: datos_salida SIG dato_salida
   57             | dato_salida

   58 dato_salida: exp
   59            | CADENA

   60 sentencia_return: exp

   61 sentencia_do_until: bloque UNTIL PARIZQ exp PARDCH

   62 sentencia_funcion: items

   63 sentencia_lista: ID SIG
   64                | ID ANT
   65                | DOLLAR ID

   66 exp: exp PLUS termino
   67    | exp MINUS termino
   68    | exp TIMES termino
   69    | exp OR termino
   70    | exp AND termino
   71    | exp XOR termino
   72    | exp REL termino
   73    | exp EQ termino
   74    | exp DIV termino
   75    | exp MOD termino
   76    | exp exp_simple aux LLAVEIZQ ID LLAVEDCH
   77    | termino

   78 exp_lista_ID: AT num op_ternario
   79             | MINUSMINUS num
   80             | TIMESTIMES ID
   81             | PLUS exp_simple
   82             | MINUS exp_simple
   83             | TIMES exp_simple
   84             | DIV exp_simple
   85             | MOD exp_simple
   86             | error

   87 op_ternario: PLUSPLUS exp_simple

   88 aux: PLUS
   89    | TIMES

   90 termino: exp_simple
   91        | OPEMON exp_simple
   92        | PARIZQ exp PARDCH
   93        | INTERR LLAVEIZQ ID LLAVEDCH
   94        | HASHTAG LLAVEIZQ ID LLAVEDCH
   95        | ID exp_lista_ID

   96 exp_simple: num
   97           | CHAR
   98           | VALBOOL
   99           | LLAVEIZQ ID LLAVEDCH
  100           | error

  101 num: NUMERO
  102    | ENTERO

  103 tipo_var_elem: TIPOVAR
  104              | TIPOCHAR
  105              | TIPOINT

  106 tipo_var: tipo_var_elem
  107         | TIPOLISTA


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 13 30 86 100
    WHILE (258) 38
    DO (259) 42
    UNTIL (260) 61
    IF (261) 37
    ELSE (262) 50
    CIN (263) 39
    COUT (264) 40
    MAIN (265) 1
    RETURN (266) 41
    LOCAL (267) 5
    TIPOINT (268) 1 105
    TIPOCHAR (269) 104
    TIPOVAR (270) 103
    TIPOLISTA (271) 12 19 107
    TIPOCONST (272) 17 19
    VALBOOL (273) 98
    PARIZQ (274) 29 43 49 50 51 61 92
    PARDCH (275) 29 43 49 50 51 61 92
    LLAVEIZQ (276) 3 5 76 93 94 99
    LLAVEDCH (277) 3 5 76 93 94 99
    CORIZQ (278) 19 47 48
    CORDCH (279) 20 21 47 48
    PYC (280) 11 12 17 19 27 35 36 37 38 39 40 41 42 43 44
    COMA (281) 14 22 31
    ASIGN (282) 17 19 36
    OPEMON (283) 91
    OR (284) 69
    AND (285) 70
    XOR (286) 71
    EQ (287) 73
    REL (288) 72
    SIG (289) 52 53 56 63
    ANT (290) 55 64
    DOLLAR (291) 65
    HASHTAG (292) 94
    INTERR (293) 93
    DIV (294) 74 84
    MOD (295) 75 85
    AT (296) 78
    PLUSPLUS (297) 87
    MINUSMINUS (298) 79
    TIMESTIMES (299) 80
    PLUS (300) 66 81 88
    MINUS (301) 67 82
    TIMES (302) 68 83 89
    CHAR (303) 97
    CADENA (304) 21 48 59
    NUMERO (305) 101
    ENTERO (306) 102
    ID (307) 14 15 17 19 29 34 36 43 63 64 65 76 80 93 94 95 99


No terminales con las reglas donde aparecen

    $accept (53)
        on left: 0
    programa (54)
        on left: 1
        on right: 0
    bloque (55)
        on left: 3
        on right: 1 27 35 49 50 51 61
    $@1 (56)
        on left: 2
        on right: 3
    declar_var_locales (57)
        on left: 5 6
        on right: 3
    $@2 (58)
        on left: 4
        on right: 5
    var_locales (59)
        on left: 7 8 9 10
        on right: 5 7 8
    cuerpo_declar_var (60)
        on left: 11 12 13
        on right: 7 9
    nombres (61)
        on left: 14 15
        on right: 11 12 14
    cuerpo_declar_const (62)
        on left: 17 19
        on right: 8 10
    $@3 (63)
        on left: 16
        on right: 17
    $@4 (64)
        on left: 18
        on right: 19
    asig_const_lista (65)
        on left: 20 21
        on right: 19
    items (66)
        on left: 22 23 24
        on right: 20 22 47 62
    declar_funciones (67)
        on left: 25 26
        on right: 3 25
    declar_funcion (68)
        on left: 27
        on right: 25
    cabec_funcion (69)
        on left: 29 30
        on right: 27
    $@5 (70)
        on left: 28
        on right: 29
    parametros (71)
        on left: 31 32 33
        on right: 29 31
    parametro (72)
        on left: 34
        on right: 31 32
    sentencias (73)
        on left: 35 36 37 38 39 40 41 42 43 44 45
        on right: 3 35 36 37 38 39 40 41 42 43 44
    sentencia_asig (74)
        on left: 46 47 48
        on right: 36
    sentencia_if (75)
        on left: 49 50
        on right: 37
    sentencia_while (76)
        on left: 51
        on right: 38
    sentencia_entrada (77)
        on left: 52
        on right: 39
    datos_entrada (78)
        on left: 53 54
        on right: 52 53
    sentencia_salida (79)
        on left: 55
        on right: 40
    datos_salida (80)
        on left: 56 57
        on right: 55 56
    dato_salida (81)
        on left: 58 59
        on right: 56 57
    sentencia_return (82)
        on left: 60
        on right: 41
    sentencia_do_until (83)
        on left: 61
        on right: 42
    sentencia_funcion (84)
        on left: 62
        on right: 43
    sentencia_lista (85)
        on left: 63 64 65
        on right: 44
    exp (86)
        on left: 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 46 49 50 51 53 54 58 60 61 66 67 68 69 70 71 72 73 74 75 76 92
    exp_lista_ID (87)
        on left: 78 79 80 81 82 83 84 85 86
        on right: 95
    op_ternario (88)
        on left: 87
        on right: 78
    aux (89)
        on left: 88 89
        on right: 76
    termino (90)
        on left: 90 91 92 93 94 95
        on right: 66 67 68 69 70 71 72 73 74 75 77
    exp_simple (91)
        on left: 96 97 98 99 100
        on right: 17 22 23 76 81 82 83 84 85 87 90 91
    num (92)
        on left: 101 102
        on right: 78 79 96
    tipo_var_elem (93)
        on left: 103 104 105
        on right: 11 12 17 19 106
    tipo_var (94)
        on left: 106 107
        on right: 29 34


Estado 0

    0 $accept: • programa $end

    TIPOINT  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TIPOINT • MAIN bloque

    MAIN  desplazar e ir al estado 3


Estado 2

    0 $accept: programa • $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TIPOINT MAIN • bloque

    LLAVEIZQ  desplazar e ir al estado 5

    bloque  ir al estado 6


Estado 4

    0 $accept: programa $end •

    $default  aceptar


Estado 5

    3 bloque: LLAVEIZQ • $@1 declar_var_locales declar_funciones sentencias LLAVEDCH

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 7


Estado 6

    1 programa: TIPOINT MAIN bloque •

    $default  reduce usando la regla 1 (programa)


Estado 7

    3 bloque: LLAVEIZQ $@1 • declar_var_locales declar_funciones sentencias LLAVEDCH

    LOCAL  desplazar e ir al estado 8

    $default  reduce usando la regla 6 (declar_var_locales)

    declar_var_locales  ir al estado 9


Estado 8

    5 declar_var_locales: LOCAL • LLAVEIZQ $@2 var_locales LLAVEDCH

    LLAVEIZQ  desplazar e ir al estado 10


Estado 9

    3 bloque: LLAVEIZQ $@1 declar_var_locales • declar_funciones sentencias LLAVEDCH

    $default  reduce usando la regla 26 (declar_funciones)

    declar_funciones  ir al estado 11


Estado 10

    5 declar_var_locales: LOCAL LLAVEIZQ • $@2 var_locales LLAVEDCH

    $default  reduce usando la regla 4 ($@2)

    $@2  ir al estado 12


Estado 11

    3 bloque: LLAVEIZQ $@1 declar_var_locales declar_funciones • sentencias LLAVEDCH
   25 declar_funciones: declar_funciones • declar_funcion

    error      desplazar e ir al estado 13
    TIPOINT    desplazar e ir al estado 14
    TIPOCHAR   desplazar e ir al estado 15
    TIPOVAR    desplazar e ir al estado 16
    TIPOLISTA  desplazar e ir al estado 17

    WHILE     reduce usando la regla 45 (sentencias)
    DO        reduce usando la regla 45 (sentencias)
    IF        reduce usando la regla 45 (sentencias)
    CIN       reduce usando la regla 45 (sentencias)
    COUT      reduce usando la regla 45 (sentencias)
    RETURN    reduce usando la regla 45 (sentencias)
    LLAVEIZQ  reduce usando la regla 45 (sentencias)
    LLAVEDCH  reduce usando la regla 45 (sentencias)
    DOLLAR    reduce usando la regla 45 (sentencias)
    ID        reduce usando la regla 45 (sentencias)

    declar_funcion  ir al estado 18
    cabec_funcion   ir al estado 19
    sentencias      ir al estado 20
    tipo_var_elem   ir al estado 21
    tipo_var        ir al estado 22


Estado 12

    5 declar_var_locales: LOCAL LLAVEIZQ $@2 • var_locales LLAVEDCH

    error      desplazar e ir al estado 23
    TIPOINT    desplazar e ir al estado 14
    TIPOCHAR   desplazar e ir al estado 15
    TIPOVAR    desplazar e ir al estado 16
    TIPOLISTA  desplazar e ir al estado 24
    TIPOCONST  desplazar e ir al estado 25

    var_locales          ir al estado 26
    cuerpo_declar_var    ir al estado 27
    cuerpo_declar_const  ir al estado 28
    tipo_var_elem        ir al estado 29


Estado 13

   30 cabec_funcion: error •

    $default  reduce usando la regla 30 (cabec_funcion)


Estado 14

  105 tipo_var_elem: TIPOINT •

    $default  reduce usando la regla 105 (tipo_var_elem)


Estado 15

  104 tipo_var_elem: TIPOCHAR •

    $default  reduce usando la regla 104 (tipo_var_elem)


Estado 16

  103 tipo_var_elem: TIPOVAR •

    $default  reduce usando la regla 103 (tipo_var_elem)


Estado 17

  107 tipo_var: TIPOLISTA •

    $default  reduce usando la regla 107 (tipo_var)


Estado 18

   25 declar_funciones: declar_funciones declar_funcion •

    $default  reduce usando la regla 25 (declar_funciones)


Estado 19

   27 declar_funcion: cabec_funcion • bloque PYC

    LLAVEIZQ  desplazar e ir al estado 5

    bloque  ir al estado 30


Estado 20

    3 bloque: LLAVEIZQ $@1 declar_var_locales declar_funciones sentencias • LLAVEDCH
   35 sentencias: sentencias • bloque PYC
   36           | sentencias • ID ASIGN sentencia_asig PYC
   37           | sentencias • IF sentencia_if PYC
   38           | sentencias • WHILE sentencia_while PYC
   39           | sentencias • CIN sentencia_entrada PYC
   40           | sentencias • COUT sentencia_salida PYC
   41           | sentencias • RETURN sentencia_return PYC
   42           | sentencias • DO sentencia_do_until PYC
   43           | sentencias • ID PARIZQ sentencia_funcion PARDCH PYC
   44           | sentencias • sentencia_lista PYC

    WHILE     desplazar e ir al estado 31
    DO        desplazar e ir al estado 32
    IF        desplazar e ir al estado 33
    CIN       desplazar e ir al estado 34
    COUT      desplazar e ir al estado 35
    RETURN    desplazar e ir al estado 36
    LLAVEIZQ  desplazar e ir al estado 5
    LLAVEDCH  desplazar e ir al estado 37
    DOLLAR    desplazar e ir al estado 38
    ID        desplazar e ir al estado 39

    bloque           ir al estado 40
    sentencia_lista  ir al estado 41


Estado 21

  106 tipo_var: tipo_var_elem •

    $default  reduce usando la regla 106 (tipo_var)


Estado 22

   29 cabec_funcion: tipo_var • ID $@5 PARIZQ parametros PARDCH

    ID  desplazar e ir al estado 42


Estado 23

   13 cuerpo_declar_var: error •

    $default  reduce usando la regla 13 (cuerpo_declar_var)


Estado 24

   12 cuerpo_declar_var: TIPOLISTA • tipo_var_elem nombres PYC

    TIPOINT   desplazar e ir al estado 14
    TIPOCHAR  desplazar e ir al estado 15
    TIPOVAR   desplazar e ir al estado 16

    tipo_var_elem  ir al estado 43


Estado 25

   17 cuerpo_declar_const: TIPOCONST • tipo_var_elem ID $@3 ASIGN exp_simple PYC
   19                    | TIPOCONST • TIPOLISTA tipo_var_elem ID $@4 ASIGN CORIZQ asig_const_lista PYC

    TIPOINT    desplazar e ir al estado 14
    TIPOCHAR   desplazar e ir al estado 15
    TIPOVAR    desplazar e ir al estado 16
    TIPOLISTA  desplazar e ir al estado 44

    tipo_var_elem  ir al estado 45


Estado 26

    5 declar_var_locales: LOCAL LLAVEIZQ $@2 var_locales • LLAVEDCH
    7 var_locales: var_locales • cuerpo_declar_var
    8            | var_locales • cuerpo_declar_const

    error      desplazar e ir al estado 23
    TIPOINT    desplazar e ir al estado 14
    TIPOCHAR   desplazar e ir al estado 15
    TIPOVAR    desplazar e ir al estado 16
    TIPOLISTA  desplazar e ir al estado 24
    TIPOCONST  desplazar e ir al estado 25
    LLAVEDCH   desplazar e ir al estado 46

    cuerpo_declar_var    ir al estado 47
    cuerpo_declar_const  ir al estado 48
    tipo_var_elem        ir al estado 29


Estado 27

    9 var_locales: cuerpo_declar_var •

    $default  reduce usando la regla 9 (var_locales)


Estado 28

   10 var_locales: cuerpo_declar_const •

    $default  reduce usando la regla 10 (var_locales)


Estado 29

   11 cuerpo_declar_var: tipo_var_elem • nombres PYC

    ID  desplazar e ir al estado 49

    nombres  ir al estado 50


Estado 30

   27 declar_funcion: cabec_funcion bloque • PYC

    PYC  desplazar e ir al estado 51


Estado 31

   38 sentencias: sentencias WHILE • sentencia_while PYC

    PARIZQ  desplazar e ir al estado 52

    sentencia_while  ir al estado 53


Estado 32

   42 sentencias: sentencias DO • sentencia_do_until PYC

    LLAVEIZQ  desplazar e ir al estado 5

    bloque              ir al estado 54
    sentencia_do_until  ir al estado 55


Estado 33

   37 sentencias: sentencias IF • sentencia_if PYC

    PARIZQ  desplazar e ir al estado 56

    sentencia_if  ir al estado 57


Estado 34

   39 sentencias: sentencias CIN • sentencia_entrada PYC

    SIG  desplazar e ir al estado 58

    sentencia_entrada  ir al estado 59


Estado 35

   40 sentencias: sentencias COUT • sentencia_salida PYC

    ANT  desplazar e ir al estado 60

    sentencia_salida  ir al estado 61


Estado 36

   41 sentencias: sentencias RETURN • sentencia_return PYC

    error     desplazar e ir al estado 62
    VALBOOL   desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64
    LLAVEIZQ  desplazar e ir al estado 65
    OPEMON    desplazar e ir al estado 66
    HASHTAG   desplazar e ir al estado 67
    INTERR    desplazar e ir al estado 68
    CHAR      desplazar e ir al estado 69
    NUMERO    desplazar e ir al estado 70
    ENTERO    desplazar e ir al estado 71
    ID        desplazar e ir al estado 72

    sentencia_return  ir al estado 73
    exp               ir al estado 74
    termino           ir al estado 75
    exp_simple        ir al estado 76
    num               ir al estado 77


Estado 37

    3 bloque: LLAVEIZQ $@1 declar_var_locales declar_funciones sentencias LLAVEDCH •

    $default  reduce usando la regla 3 (bloque)


Estado 38

   65 sentencia_lista: DOLLAR • ID

    ID  desplazar e ir al estado 78


Estado 39

   36 sentencias: sentencias ID • ASIGN sentencia_asig PYC
   43           | sentencias ID • PARIZQ sentencia_funcion PARDCH PYC
   63 sentencia_lista: ID • SIG
   64                | ID • ANT

    PARIZQ  desplazar e ir al estado 79
    ASIGN   desplazar e ir al estado 80
    SIG     desplazar e ir al estado 81
    ANT     desplazar e ir al estado 82


Estado 40

   35 sentencias: sentencias bloque • PYC

    PYC  desplazar e ir al estado 83


Estado 41

   44 sentencias: sentencias sentencia_lista • PYC

    PYC  desplazar e ir al estado 84


Estado 42

   29 cabec_funcion: tipo_var ID • $@5 PARIZQ parametros PARDCH

    $default  reduce usando la regla 28 ($@5)

    $@5  ir al estado 85


Estado 43

   12 cuerpo_declar_var: TIPOLISTA tipo_var_elem • nombres PYC

    ID  desplazar e ir al estado 49

    nombres  ir al estado 86


Estado 44

   19 cuerpo_declar_const: TIPOCONST TIPOLISTA • tipo_var_elem ID $@4 ASIGN CORIZQ asig_const_lista PYC

    TIPOINT   desplazar e ir al estado 14
    TIPOCHAR  desplazar e ir al estado 15
    TIPOVAR   desplazar e ir al estado 16

    tipo_var_elem  ir al estado 87


Estado 45

   17 cuerpo_declar_const: TIPOCONST tipo_var_elem • ID $@3 ASIGN exp_simple PYC

    ID  desplazar e ir al estado 88


Estado 46

    5 declar_var_locales: LOCAL LLAVEIZQ $@2 var_locales LLAVEDCH •

    $default  reduce usando la regla 5 (declar_var_locales)


Estado 47

    7 var_locales: var_locales cuerpo_declar_var •

    $default  reduce usando la regla 7 (var_locales)


Estado 48

    8 var_locales: var_locales cuerpo_declar_const •

    $default  reduce usando la regla 8 (var_locales)


Estado 49

   15 nombres: ID •

    $default  reduce usando la regla 15 (nombres)


Estado 50

   11 cuerpo_declar_var: tipo_var_elem nombres • PYC
   14 nombres: nombres • COMA ID

    PYC   desplazar e ir al estado 89
    COMA  desplazar e ir al estado 90


Estado 51

   27 declar_funcion: cabec_funcion bloque PYC •

    $default  reduce usando la regla 27 (declar_funcion)


Estado 52

   51 sentencia_while: PARIZQ • exp PARDCH bloque

    error     desplazar e ir al estado 62
    VALBOOL   desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64
    LLAVEIZQ  desplazar e ir al estado 65
    OPEMON    desplazar e ir al estado 66
    HASHTAG   desplazar e ir al estado 67
    INTERR    desplazar e ir al estado 68
    CHAR      desplazar e ir al estado 69
    NUMERO    desplazar e ir al estado 70
    ENTERO    desplazar e ir al estado 71
    ID        desplazar e ir al estado 72

    exp         ir al estado 91
    termino     ir al estado 75
    exp_simple  ir al estado 76
    num         ir al estado 77


Estado 53

   38 sentencias: sentencias WHILE sentencia_while • PYC

    PYC  desplazar e ir al estado 92


Estado 54

   61 sentencia_do_until: bloque • UNTIL PARIZQ exp PARDCH

    UNTIL  desplazar e ir al estado 93


Estado 55

   42 sentencias: sentencias DO sentencia_do_until • PYC

    PYC  desplazar e ir al estado 94


Estado 56

   49 sentencia_if: PARIZQ • exp PARDCH bloque
   50             | PARIZQ • exp PARDCH bloque ELSE bloque

    error     desplazar e ir al estado 62
    VALBOOL   desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64
    LLAVEIZQ  desplazar e ir al estado 65
    OPEMON    desplazar e ir al estado 66
    HASHTAG   desplazar e ir al estado 67
    INTERR    desplazar e ir al estado 68
    CHAR      desplazar e ir al estado 69
    NUMERO    desplazar e ir al estado 70
    ENTERO    desplazar e ir al estado 71
    ID        desplazar e ir al estado 72

    exp         ir al estado 95
    termino     ir al estado 75
    exp_simple  ir al estado 76
    num         ir al estado 77


Estado 57

   37 sentencias: sentencias IF sentencia_if • PYC

    PYC  desplazar e ir al estado 96


Estado 58

   52 sentencia_entrada: SIG • datos_entrada

    error     desplazar e ir al estado 62
    VALBOOL   desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64
    LLAVEIZQ  desplazar e ir al estado 65
    OPEMON    desplazar e ir al estado 66
    HASHTAG   desplazar e ir al estado 67
    INTERR    desplazar e ir al estado 68
    CHAR      desplazar e ir al estado 69
    NUMERO    desplazar e ir al estado 70
    ENTERO    desplazar e ir al estado 71
    ID        desplazar e ir al estado 72

    datos_entrada  ir al estado 97
    exp            ir al estado 98
    termino        ir al estado 75
    exp_simple     ir al estado 76
    num            ir al estado 77


Estado 59

   39 sentencias: sentencias CIN sentencia_entrada • PYC

    PYC  desplazar e ir al estado 99


Estado 60

   55 sentencia_salida: ANT • datos_salida

    error     desplazar e ir al estado 62
    VALBOOL   desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64
    LLAVEIZQ  desplazar e ir al estado 65
    OPEMON    desplazar e ir al estado 66
    HASHTAG   desplazar e ir al estado 67
    INTERR    desplazar e ir al estado 68
    CHAR      desplazar e ir al estado 69
    CADENA    desplazar e ir al estado 100
    NUMERO    desplazar e ir al estado 70
    ENTERO    desplazar e ir al estado 71
    ID        desplazar e ir al estado 72

    datos_salida  ir al estado 101
    dato_salida   ir al estado 102
    exp           ir al estado 103
    termino       ir al estado 75
    exp_simple    ir al estado 76
    num           ir al estado 77


Estado 61

   40 sentencias: sentencias COUT sentencia_salida • PYC

    PYC  desplazar e ir al estado 104


Estado 62

  100 exp_simple: error •

    $default  reduce usando la regla 100 (exp_simple)


Estado 63

   98 exp_simple: VALBOOL •

    $default  reduce usando la regla 98 (exp_simple)


Estado 64

   92 termino: PARIZQ • exp PARDCH

    error     desplazar e ir al estado 62
    VALBOOL   desplazar e ir al estado 63
    PARIZQ    desplazar e ir al estado 64
    LLAVEIZQ  desplazar e ir al estado 65
    OPEMON    desplazar e ir al estado 66
    HASHTAG   desplazar e ir al estado 67
    INTERR    desplazar e ir al estado 68
    CHAR      desplazar e ir al estado 69
    NUMERO    desplazar e ir al estado 70
    ENTERO    desplazar e ir al estado 71
    ID        desplazar e ir al estado 72

    exp         ir al estado 105
    termino     ir al estado 75
    exp_simple  ir al estado 76
    num         ir al estado 77


Estado 65

   99 exp_simple: LLAVEIZQ • ID LLAVEDCH

    ID  desplazar e ir al estado 106


Estado 66

   91 termino: OPEMON • exp_simple

    error     desplazar e ir al estado 62
    VALBOOL   desplazar e ir al estado 63
    LLAVEIZQ  desplazar e ir al estado 65
    CHAR      desplazar e ir al estado 69
    NUMERO    desplazar e ir al estado 70
    ENTERO    desplazar e ir al estado 71

    exp_simple  ir al estado 107
    num         ir al estado 77


Estado 67

   94 termino: HASHTAG • LLAVEIZQ ID LLAVEDCH

    LLAVEIZQ  desplazar e ir al estado 108


Estado 68

   93 termino: INTERR • LLAVEIZQ ID LLAVEDCH

    LLAVEIZQ  desplazar e ir al estado 109


Estado 69

   97 exp_simple: CHAR •

    $default  reduce usando la regla 97 (exp_simple)


Estado 70

  101 num: NUMERO •

    $default  reduce usando la regla 101 (num)


Estado 71

  102 num: ENTERO •

    $default  reduce usando la regla 102 (num)


Estado 72

   95 termino: ID • exp_lista_ID
